<resources>
    <string name="app_name">TearnApp</string>
    <string name="titleapp_uppercase">TEARN</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_on_boarding_title1">Professional Teaching</string>
    <string name="label_on_boarding_title2">Books for you</string>
    <string name="label_on_boarding_title3">Exclusive Recomendations</string>
    <string name="btn_text_onboarding">Next</string>

    <string name="label_on_boarding_description">Lorem ipmsum que no se que pone aca xd, Lorem ipmsum que no se que pone aca xd, Lorem ipmsum que no se que pone aca xd</string>
    <string name="course_tab">Assignments</string>
    <string name="tutor_tab">Tutors</string>
    <string name="default_query">Calculus</string>
    <string name="tool_name">Calculus II</string>
    <string name="tool_count_tutors">3 Tutors</string>
    <string name="no_results">No Results</string>
    <string name="name_tool">Carlos Cortez</string>
    <string name="tool_punctuation">3</string>

    <string name="tool_course_name">Calculus II</string>
    <string name="tool_category_name">Categories</string>
    <string name="category_name">Categories</string>

    <string name="tool_name_category">Engineer and Architecture</string>
    <string name="tool_category_description">Better Students for a Better World</string>
    <string name="tool_subject_tutor">Social Math</string>

    <string name="available_tutor">Tutors available</string>
    <string name="action_reco_title_text">Search Tutors</string>
    <string name="reco_tutors_title_text">Recommended Tutors</string>
    <string name="comment_box_text">Write a review about the Tutor</string>
    <string name="info_tutor_text">Tutor Information</string>
    <string name="fav_tutors">Favorite Tutors</string>

    <string name="home_theme_interest_title">Topics of Interest</string>
    <string name="action_theme_interest_title">See All</string>

    <string name="account_text">Account</string>
    <string name="chats_text">Chats</string>

    <string name="logout">Log out</string>
    <string name="convert_to_tutor">Become a Tutor</string>
    <string name="text_tutor_information">My Info</string>
    <string name="text_complete_form">Fill the Form</string>
    <string name="lorem_3_sentences">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere morbi leo urna molestie at elementum eu facilisis. Et pharetra pharetra massa massa ultricies mi quis hendrerit. Fames ac turpis egestas maecenas pharetra.</string>
    <string name="text_form_warning">The info you are going to add its going to be shown so the students can know you better</string>
    <string name="hint_input_name">e.g. Carlos Roberto</string>
    <string name="hint_input_lastname">e. g. Cortez Iraheta</string>
    <string name="hint_input_email">myEmail@gmail.com</string>
    <string name="text_form_next">Siguiente</string>

    <string name="text_form_names">Name</string>
    <string name="text_form_lastname">Surname</string>
    <string name="text_form_email">Email</string>
    <string name="text_dob">BirthDate</string>
    <string name="text_form_language">Language</string>
    <string name="hint_form_description">Write what are you up to, hobbies, etc</string>
    <string name="hint_form_date">dd/mm/yy</string>
    <string name="hint_form_subjects">Choose an Assignment</string>
    <string name="check_spanish">Spanish</string>
    <string name="check_english">English</string>
    <string name="hint_form_dropdown">Assignment you want to enroll</string>
    <string name="hint_form_course">Course you want to teach</string>
    <string name="text_form_time_response">Average response time</string>
    <string name="hint_form_time">Select a time</string>
    <string name="text_form_availability">Availability</string>
    <string name="check_availability_virtual">Virtual</string>
    <string name="check_availability_onsite">Face-to-Face</string>
    <string name="button_tutor">¡I want to become a tutor!</string>
    <string name="title_activity_maps">Map</string>
    <string name="web_client">704366497875-bnmdtr17a45qv2dlmjdq0ob81tf7vem1.apps.googleusercontent.com</string>

    <string name="tearn_text">TEARN</string>
    <string name="temas_de_interes_text">Themes of interest</string>
    <string name="ver_todo_text">See more</string>
    <string name="tutor_text">Tutor</string>
    <string name="about_you">About you</string>
    <string name="info_frag_edit_text">Edit</string>
    <string name="personal_info_text">Personal information</string>
    <string name="info_frag_name_Text">Names</string>
    <string name="input_text_name_example">e. g. Henry Alexander</string>
    <string name="surname_info_text">Lastnames</string>
    <string name="input_text_surname_example">e. g. Cortez Amaya</string>
    <string name="dob_inf_frag">Date of birthday</string>
    <string name="input_text_dob_example">e. g. 17/5/2000</string>
    <string name="info_frag_about_you_text">About me</string>
    <string name="info_frag_tutor">Tutor information</string>
    <string name="info_frag_assignments_tutor">My subjects</string>
    <string name="info_frag_time_response">Response time</string>
    <string name="info_frag_refresh">Update</string>
    <string name="info_frag_response_time_ex">1h</string>
    <string name="landing_frag_title_text">Contribute to the community</string>
    <string name="form_frag_btn_text">Send</string>
    <string name="form_frag_msg_hint_text">MESSAGE</string>
    <string name="form_frag_hint_topic_txt">SUBJECT</string>
    <string name="form_frag_reciever_btn">Addressee</string>
    <string name="form_frag_title">Send email</string>
    <string name="form_msg_frag_title">Emails</string>
    <string name="user_mail_name">Carlos Cortez</string>
    <string name="user_mail_topic">Math help</string>
    <string name="user_mail_content">hello carlo, I see your profile..</string>
    <string name="tool_username">Henry Cortez</string>
    <string name="tool_email">Henry200amaya@gmail.com</string>
    <string name="text_favorite_tutor">Favorite tutors</string>
    <string name="tearn">TEARN</string>
    <string name="home_see_all">See more</string>
    <string name="home_tutor_recommended">Recommended tutors</string>
    <string name="home_search_tutor">Search tutors</string>
    <string name="home_book_recommend">Recommended books</string>
    <string name="home_search_book">Search books</string>
    <string name="community">Contribute to the community</string>
    <string name="login_welcome">Welcome to \n TEARN !</string>
    <string name="slogan">Learn something new every day</string>
    <string name="tool_recommendations">Recommendations</string>
    <string name="text_recommendations">Recommendations</string>
    <string name="text_title">You are almost starting!</string>
    <string name="categories">From the following categories, choose three that are of interest to you</string>
    <string name="preferences_begin">Get Started</string>
    <string name="preferences_pass">Skip</string>
    <string name="tutor_response">Average response time</string>
    <string name="tutor_languages">Languages</string>
    <string name="tutor_information">Tutor information</string>
    <string name="tutor_availability">Availability</string>
    <string name="text_tutor_valuations">Valuations</string>
    <string name="text_tutor_add_valuation">Add valuations</string>
    <string name="text_tutor_punctuation">Score the tutor</string>
    <string name="text_tutor_add_review">Write a review for the tutor</string>
    <string name="text_tutor_send">Send</string>
    <string name="tutor_text_availabilty">Tutor</string>
    <string name="text_tutor_cancel">Cancel</string>
    <string name="text_report_tutor">Report tutor</string>
    <string name="text_tutor_reason">Why do you want to report to the tutor?</string>
    <string name="valuations">Valuations</string>

    <string name="on_boarding_1_desc">An application where you can find expert tutors in the topics of your interest, ready to help you in the best possible way</string>
    <string name="on_boarding_2_desc">Selection of books from your favorite subjects to encourage you to improve your learning and encourage reading</string>
    <string name="on_boarding_3_desc">You have the possibility to select your favorite subjects, from which recommendations of tutors, books and courses will be made</string>
    <string name="landing_description">Take the next step by becoming a tutor and support the world community with your knowledge!</string>
    <string name="string_inbox">Inbox</string>
</resources>