<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="@dimen/default_gap"
        android:src="@drawable/ic_baseline_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="24dp"
        android:text="@string/form_frag_title"
        android:textSize="@dimen/h1"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:layout_marginTop="@dimen/default_gap"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:text="@string/form_frag_reciever_btn"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        tools:layout_editor_absoluteX="82dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_text_name_example"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        tools:layout_editor_absoluteY="127dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_gap"
        android:gravity="center"
        android:hint="@string/form_frag_hint_topic_txt"
        android:textColor="@color/gray"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="213dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_gap"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/form_frag_msg_hint_text"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:text="@string/form_frag_btn_text"
        android:textSize="@dimen/h3"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="577dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_black"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>