<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8sp"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/shape_course_search">

        <TextView
            android:id="@+id/form_mail_reciever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/default_gap"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/h4"
            tools:text="@string/user_mail_name" />


        <TextView
            android:id="@+id/form_topic_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/default_gap"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/form_mail_reciever"
            android:gravity="top"
            android:textColor="@color/semi_black"
            android:textSize="18sp"
            tools:text="@string/user_mail_topic" />

        <TextView
            android:id="@+id/course_search_tutors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/default_gap"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/form_mail_reciever"
            android:gravity="bottom"
            android:textColor="@color/semi_black"
            android:textSize="18sp"
            tools:text="@string/user_mail_content" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>