<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30sp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.account.formtutor.LandingFormFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/community"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/h1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="@dimen/default_gap"
        android:scaleType="centerInside"
        android:src="@drawable/home_form" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_gap"
        android:text="@string/landing_description"
        android:textAlignment="center"
        android:textSize="@dimen/h4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/default_gap"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/on_boarding_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:src="@drawable/ic_baseline_lens_24" />

            <ImageView
                android:id="@+id/on_boarding_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_panorama_fish_eye_24" />

            <ImageView
                android:id="@+id/on_boarding_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_panorama_fish_eye_24" />

            <ImageView
                android:id="@+id/on_boarding_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_panorama_fish_eye_24" />

        </LinearLayout>

        <Button
            android:id="@+id/action_next_form"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:text="@string/text_form_next"
            android:textColor="@color/black" />
    </RelativeLayout>
</LinearLayout>