<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="accountViewModel"
            type="com.tearnsv.tearnapp.ui.account.viewmodel.AccountViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.account.AccountFragment">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:background="@color/purple_black"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/username_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@drawable/default_photo"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircleRadius="@dimen/cardview_default_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@{accountViewModel.fetchUserAccountResponse.username}"
            android:textColor="@color/black"
            android:textSize="@dimen/h1"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/username_image"
            tools:layout_editor_absoluteX="35dp"
            tools:text="Henry Cortez" />

        <LinearLayout
            android:id="@+id/linear_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_gap"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:layout_marginTop="@dimen/default_gap">

                <TextView
                    android:id="@+id/action_favorite_tutors"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:text="@string/fav_tutors"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h3" />

                <ImageView
                    android:id="@+id/icon_favorite_tutors"
                    android:layout_width="30sp"
                    android:layout_height="50sp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_baseline_favorite_24" />
            </RelativeLayout>

            <View
                android:id="@+id/view_tutor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hr_line"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:background="@color/black" />


            <RelativeLayout
                android:id="@+id/layout_no_tutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_gap">

                <TextView
                    android:id="@+id/action_convert_to_tutor"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:text="@string/convert_to_tutor"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h3" />

                <ImageView
                    android:id="@+id/icon_convert_to_tutor"
                    android:layout_width="30sp"
                    android:layout_height="50sp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_baseline_school_24" />
            </RelativeLayout>

            <View
                android:id="@+id/view_tutor_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hr_line"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:background="@color/black" />

            <RelativeLayout
                android:id="@+id/layout_is_tutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_gap">

                <TextView
                    android:id="@+id/action_information"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:text="@string/text_tutor_information"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h3" />

                <ImageView
                    android:id="@+id/icon_information"
                    android:layout_width="30sp"
                    android:layout_height="50sp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_baseline_info_24" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/hr_line"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:background="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_gap">

                <TextView
                    android:id="@+id/action_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/red_200"
                    android:textSize="@dimen/h3" />

                <ImageView
                    android:id="@+id/icon_logout"
                    android:layout_width="30sp"
                    android:layout_height="50sp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_baseline_login_24"
                    app:tint="@color/red_200" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:text="@{accountViewModel.fetchUserAccountResponse.email}"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/username_email"
            tools:layout_editor_absoluteX="0dp"
            tools:text="Henry200amaya@gmail.com" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>